--- a/LetterBox/FilmesRK.html
+++ b/LetterBox/FilmesRK.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ranking Pessoal - Eduardo</title>
+    <title>Cine Box</title>
     <link type="text/css" rel="stylesheet" href="Estilos/estilo-movie.css">
     <script src="Scripts/scripts-movie.js"></script>
 </head>
