Index para Projetos Front
Criando um index em html e estilizando-o para permitir acesso aos códigos hospedados.

--- a/index.html
+++ b/index.html
@@ -4,22 +4,63 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos Front End V1</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
-    <header>
-        <a href=""><img src="" alt=""></a> <!-- GitHub-->
+    <header class="info-sobre">
+        <img class="info-sobre-img" src="perfilGit.jpg" alt="">
+        <a href=""><strong><h1>Eduardo-Marinho-Paiva</h1></strong></a> <!-- GitHub-->
+        <a href=""><img src="https://img.shields.io/badge/-Instagram-%23E4405F?style=for-the-badge&logo=instagram&logoColor=white" alt=""></a> <!-- Instagram-->
+        <a href=""><img src="https://img.shields.io/badge/Gmail-333333?style=for-the-badge&logo=gmail&logoColor=red" alt=""></a> <!-- Linkedin-->
+        <a href=""><img src="https://img.shields.io/badge/Discord-7289DA?style=for-the-badge&logo=discord&logoColor=white" alt=""></a> <!-- Linkedin-->
+        
     </header>
-    <main>
+    <hr>
+    <main class="container-geral">
+        <section class="container-projetos">
+            <div class="header-projetos">
+                <h2>Projetos Front End</h2> 
+                <hr class="separador">
+            </div>
+            <table class="table-projetos">
+                <thead>
+                    <th>Arquivo</th>
+                    <th>Data</th>
+                    <th>Tecnologias</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><a href="https://eduardo-marinho-paiva.github.io/Treinos_Front_End_2024/LetterBox/FilmesRK.html">Cine Box</a> <!-- Cine Box--></td>
+                        <td>20/03/2024</td>
+                        <td><img src="images.png"  alt=""></IMG></td>
+                    </tr>
+                    <tr>
+                        <td><a href="https://eduardo-marinho-paiva.github.io/Treinos_Front_End_2024/Landing%20Page%20Ballerini/index.html">Landing <!-- Landing Page-->Page</a></td>
+                        <td>04/03/2024</td>
+                        <td><img src="images.png"  alt=""></IMG></td>
+                    </tr>
 
+                    <tr>
+                        <td><a href="https://eduardo-marinho-paiva.github.io/Treinos_Front_End_2024/Love%20or%20Hate/LoveOrHate.html">Lover Or Hate</a> <!-- Love or Hate--></td>
+                        <td>20/03/2024</td>
+                        <td><img src="images.png"  alt=""></IMG></td>
+                    </tr>
+
+                    <tr>
+                        <td>
+                            <a href="">Boom!</a> <!-- Boom!-->
+                        </td>
+                        <td>20/03/2024</td>
+                        <td><img src="images.png"  alt=""></IMG></td>
+                    </tr>
+                </tbody>
+            </table>
+
+
+        </section>
     </main>
     <footer>
-        <div>
-            <h4>Contatos</h4>
-            <a href=""><img src="" alt=""></a> <!-- Instagram-->
-            <a href=""><img src="" alt=""></a> <!-- Linkedin-->
-
-        </div>
     </footer>
     
 </body>
