--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <header class="info-sobre">
         <img class="info-sobre-img" src="perfilGit.jpg" alt="">
-        <a href=""><strong><h1>Eduardo-Marinho-Paiva</h1></strong></a> <!-- GitHub-->
-        <a href=""><img src="https://img.shields.io/badge/-Instagram-%23E4405F?style=for-the-badge&logo=instagram&logoColor=white" alt=""></a> <!-- Instagram-->
-        <a href=""><img src="https://img.shields.io/badge/Gmail-333333?style=for-the-badge&logo=gmail&logoColor=red" alt=""></a> <!-- Linkedin-->
-        <a href=""><img src="https://img.shields.io/badge/Discord-7289DA?style=for-the-badge&logo=discord&logoColor=white" alt=""></a> <!-- Linkedin-->
+        <a href="https://github.com/Eduardo-Marinho-Paiva"><strong><h1>Eduardo-Marinho-Paiva</h1></strong></a> <!-- GitHub-->
+        <a href="https://www.instagram.com/edu.mar.p1/" target="_blank"><img src="https://img.shields.io/badge/-Instagram-%23E4405F?style=for-the-badge&logo=instagram&logoColor=white" alt=""></a> <!-- Instagram-->
+        <a href="mailto:marinhopaivaeduardo@gmail.com?" target="_blank"><img src="https://img.shields.io/badge/Gmail-333333?style=for-the-badge&logo=gmail&logoColor=red" alt=""></a> <!-- Email-->
+        <a href="https://discord.com/channels/@odraudemp/" target="_blank"><img src="https://img.shields.io/badge/Discord-7289DA?style=for-the-badge&logo=discord&logoColor=white" alt=""></a> <!-- Discord-->
         
     </header>
     <hr>
